email verification,  teacher payment info add, subject icon add, slot api update
